# useai

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  justfile  package.json  pnpm-lock.yaml  pyproject.toml  setup.bat  setup.sh
config/: atlas.hcl  countries.csv  prompt.example  regulations.csv
config/csv.example/: countries.csv
config/prompt.example/: prompt_1_1.md  prompt_1_2.md
db/: app.db  atlas.hcl
docs/: routes.md  system_architecture.md
docs/adr/: 0001-tech-stack.md  0002-adopt-atlas-for-sqlite-migration.md  0003-adopt-sqlmodel.md  0004-deprecate-atlas-adopt-alembic.md  0005-adopt-flocss-naming.md  0006-structured-logging-strategy.md  0007-adopt-hyperscript.md  template.md
migrations/: env.py
migrations/versions/: 2025_11_28_2222-19876944e0c3_initial_migration.py  2025_12_03_1331-d8bb40b07ff3_add_report_table.py  2025_12_10_2240-1ed2eb06495e_add_prompt_filename_to_report.py
scripts/: download_assets.py
src/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  logger.py  main.py  middleware.py
src/db/: __init__.py  engine.py  models.py  repository.py  schema.py  service.py
src/repositories/: __init__.py  base.py  country_repository.py  regulation_repository.py  report_repository.py
src/routers/: admin.py  pages.py  reports.py
src/services/: country_service.py  export_service.py  llm_service.py  page_service.py  prompt_service.py  regulation_service.py  report_service.py
src/templates/: admin.html  base.html  document.html  index.html  table_result.html
src/templates/components/: country_selector.html  execute_button.html  main_interface.html  prompt_debug.html  prompt_preview.html  regulation_selector.html  report_list.html  report_preview.html  report_table.html
src/templates/layout/: app_shell.html
src/templates/macros/: scrollable_box.html
src/templates/pages/: new_report.html
src/templates/shared/: country_selector.html  regulation_selector.html
src/templates/shared/macros/: scrollable_box.html  status_badge.html  table.html
src/templates/widgets/: main_interface.html  prompt_preview.html  report_list.html  report_preview.html  report_table.html
src/usecases/: __init__.py  create_report.py  download_report.py  get_reports.py  preview_prompt.py
src/utils/: jinja2_filters.py  report_utils.py  template_utils.py
static/css/: style.css
tests/: conftest.py  test_admin_import.py  test_main.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_admin.py  test_pages.py  test_reports.py
tests/unit/: __init__.py  test_country_service.py  test_regulation_service.py  test_report_service.py
tests/unit/repositories/: __init__.py  test_country_repository.py  test_regulation_repository.py  test_report_repository.py
tests/unit/services/: test_country_service.py  test_export_service.py  test_page_service.py  test_prompt_service.py  test_regulation_service.py  test_report_service.py
tests/unit/usecases/: test_create_report.py  test_download_report.py  test_get_reports.py  test_preview_prompt.py
tests/unit/utils/: test_jinja2_filters.py  test_report_utils.py  test_template_utils.py
