[project]
name = "useai"
version = "0.1.0"
requires-python = ">=3.12"
description = "A lightweight AI web application using FastAPI and HTMX"
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "faiss-cpu>=1.8,<1.9",
    "google-auth>=2.40.3",
    "google-cloud-aiplatform>=1.110.0",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-openai>=0.2,<0.3",
    "langchain-text-splitters>=0.3,<0.4",
    "openpyxl>=3.0",
    "pandas>=2.3",
    "Pillow>=11.3.0",
    "pymupdf>=1.26.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "aiosqlite>=0.21.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.17.2",
    "taskipy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.14.2",
    "coverage[toml]>=7.10",
    "docstring-parser>=0.17",
    "freezegun>=1.5.3",
    "httpx>=0.27.0",                  # FastAPIテスト用
    "mypy>=1.17.0",
    "pandas-stubs>=2.0",
    "pdoc3>=0.11",
    "playwright>=1.54.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "pytest-playwright>=0.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-randomly>=3.16.0",
    "pydantic-extra-types>=2.0",
    "pytest-testmon>=2.1.3",
    "pytest-xdist>=3.0",
    "pytest-sugar>=1.0",
    "types-openpyxl>=3.1.5.20250602",
    "types-Pillow>=10.2.0",
    "vulture>=2.14",
    "watchdog>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# =====================================
# pytest設定
# =====================================

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = []  # asyncio は pytest-asyncio が自動登録するため不要
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "--browser chromium --browser firefox --browser webkit"
asyncio_mode = "auto"

# =====================================
# ruff設定
# =====================================

[tool.ruff]
line-length = 100 # 1行の最大文字数

[tool.ruff.lint]
select = [
    "E",      # pycodestyle エラー（コードスタイル基本）
    "F",      # pyflakes（構文エラー、未使用import等）
    "W",      # pycodestyle 警告（非推奨パターン等）
    "ANN",    # flake8-annotations（型注釈チェック）
    "I",      # isort（import文の並び順チェック）
    "UP",     # pyupgrade（Python新機能への更新推奨）
    "PT",     # flake8-pytest-style（pytest記法チェック）
    "C90",    # mccabe complexity（循環的複雑度チェック）
    "C4",     # flake8-comprehensions（リスト内包表記等の最適化）
    "TID",    # flake8-tidy-imports（import文の整理）
    "SIM",    # flake8-simplify（コード簡素化推奨）
    "RET",    # flake8-return（return文の最適化）
    "ARG",    # flake8-unused-arguments（未使用引数チェック）
    "PIE",    # flake8-pie（よくあるミスパターンチェック）
    "PL",     # pylint（包括的品質チェック）
    "RUF",    # ruff-specific rules（ruff独自ルール）
    "B",      # flake8-bugbear（潜在的バグパターンチェック）
    "A",      # flake8-builtins（組み込み関数名の衝突チェック）
    "COM",    # flake8-commas（カンマ記法チェック）
    "ISC",    # flake8-implicit-str-concat（文字列結合チェック）
    "T20",    # flake8-print（print文使用チェック）
    "N",      # pep8-naming（命名規則チェック）
    "S",      # bandit（セキュリティ脆弱性チェック）
    "FBT",    # flake8-boolean-trap（boolean引数パターンチェック）
    "ERA",    # eradicate（コメントアウトされたコード検出）
    "DTZ",    # flake8-datetimez（datetime安全性チェック）
    "PD",     # pandas-vet（pandas最適化チェック）
    "PLR",    # pylint refactor（リファクタリング推奨）
    "TID252", # type: ignore禁止
    "D",      # pydocstyle（ドキュメントスタイルチェック）
]

ignore = [
    "COM812", # trailing-comma-missing（formatterと競合するため無効化）
    "ISC001", # single-line-implicit-string-concatenation（formatterと競合）
    "RUF003", # ambiguous-unicode-character-comment（日本語コメントを許可）
    "RUF002", # ambiguous-unicode-character-docstring（日本語ドキュメントを許可）
    "RUF001", # ambiguous-unicode-character-string（日本語文字列を許可）
    "PLC2401", # non-ascii-name（日本語変数名を許可）
    "S101",   # Use of assert（テスト等で使用）
    "S603",   # subprocess-without-shell-equals-true（セキュリティ上必要な場合あり）
    "FBT001", # Boolean positional arg in function definition（設定値で使用）
    "FBT002", # Boolean default value in function definition（フラグパラメータで使用）
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D415",   # First line should end with period (日本語の句点は認識されない)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single" # クォートスタイルの指定

[tool.ruff.lint.isort]
known-first-party = ["src"] # プロジェクト内パッケージの指定

[tool.ruff.lint.mccabe]
max-complexity = 5 # 循環的複雑度の上限

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true     # __init__メソッドの戻り値型も要求
allow-star-arg-any = false  # *args, **kwargsでもAny禁止
suppress-dummy-args = false # ダミー引数でも型注釈要求

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
] # イミュータブルとして扱う関数の追加

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false # pytest fixtureで括弧を強制しない
mark-parentheses = false    # pytest markで括弧を強制しない

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents" # 親ディレクトリへの相対importを禁止

[tool.ruff.lint.pylint]
max-args = 5        # 関数の引数の最大数
max-branches = 5    # 関数内の分岐の最大数
max-returns = 3     # 関数内のreturn文の最大数
max-statements = 15 # 関数内の文の最大数

[tool.ruff.lint.per-file-ignores]
"tests/unit/**" = [
    "PLR2004", # マジックナンバー許可
    "PLR0915", # 長い関数許可
    "PLR0913", # 多い引数許可
    "ARG",     # 未使用引数許可
    "PLC2401", # 非ASCII文字許可
    "S",       # セキュリティチェック緩和
    "N",       # 命名規則緩和
    "T20",     # print文許可
    "DTZ",     # datetime関連許可
    "ERA001",  # コメントアウトコード許可
    "D",       # docstring不要
    "ANN",     # 型注釈不要
]
"tests/integration/**" = [
    "PLR2004", # マジックナンバー許可
    "PLR0915", # 長い関数許可
    "PLR0913", # 多い引数許可
    "ARG",     # 未使用引数許可
    "PLC2401", # 非ASCII文字許可
    "S",       # セキュリティチェック緩和
    "N",       # 命名規則緩和
    "T20",     # print文許可
    "DTZ",     # datetime関連許可
    "ERA001",  # コメントアウトコード許可
    "D",       # docstring不要
    "ANN",     # 型注釈不要
]
"tests/e2e/**" = [
    "PLR2004", # マジックナンバー許可
    "PLR0915", # 長い関数許可
    "PLR0913", # 多い引数許可
    "ARG",     # 未使用引数許可
    "PLC2401", # 非ASCII文字許可
    "S",       # セキュリティチェック緩和
    "N",       # 命名規則緩和
    "T20",     # print文許可
    "DTZ",     # datetime関連許可
    "ERA001",  # コメントアウトコード許可
    "D",       # docstring不要
    "ANN",     # 型注釈不要
]

"src/main.py" = [
    "PLC0415", # import文の位置制限緩和
]
"src/routers/**" = [
    "ARG001",  # 未使用引数許可 (FastAPI dependency injection)
    "B008",    # Form() in defaults is FastAPI pattern
]
"src/logger.py" = [
    "PLC0415", # import文の位置制限緩和
]
"src/db/engine.py" = [
    "C901",    # init_db complexity is acceptable
    "PLR0912", # init_db branches are acceptable
    "PLR0915", # init_db statements are acceptable
]
"src/db/schema.py" = [
    "T201",    # print is intentional for DDL output
    "ARG001",  # dump function signature required by SQLAlchemy
    "ANN401",  # Any types required for SQLAlchemy callback signature
]
"migrations/**" = [
    "ERA001",  # コメントアウトコード許可 (Alembic generated comments)
    "D103",    # docstring不要
    "ANN",     # 型注釈不要
]
"scripts/**" = [
    "T201",    # print文許可 (CLI scripts)
    "S310",    # URL open許可 (download scripts)
]

# =====================================
# mypy設定
# =====================================

[tool.mypy]
python_version = "3.12" # 対象Pythonバージョン
strict = true           # 厳格モード有効
show_error_codes = true # エラーコードを表示
pretty = true           # 色付きで見やすいエラー表示
exclude = ["tests"]
enable_error_code = [
    "truthy-bool", "redundant-expr", "unused-awaitable", "ignore-without-code", "possibly-undefined"
] # 追加チェック有効化
ignore_missing_imports = true   # 型情報がないモジュールのimportエラーを無視
disallow_any_unimported = true  # 外部ライブラリのAny型も可能な限り制限
disallow_any_expr = false       # 外部ライブラリからのAny式は許容
disallow_any_decorated = false  # デコレータからのAny型は許容
disallow_untyped_calls = false  # 外部ライブラリの型なし呼び出しを許容
warn_unreachable = true         # 到達不能コードの警告
warn_redundant_casts = true     # 不要な型キャストを検出
warn_unused_ignores = true      # 不要な # type: ignore を検出
warn_return_any = true          # Any を返すコードで警告
check_untyped_defs = true       # 型注釈のない関数の内部もチェック
strict_equality = true          # 型安全でない等価比較を検出
warn_no_return = true           # 戻り値がない関数での問題を検出
warn_incomplete_stub = true     # スタブファイルの不完全性を警告

[[tool.mypy.overrides]]
module = ["tests.*", "tests_e2e.*"]
disallow_untyped_defs = false       # テストで関数の型注釈必須制御
disallow_any_explicit = true        # テストで明示的なAny型の使用制御
disallow_any_generics = true        # テストでジェネリックAny型の使用制御
warn_return_any = false             # テストでAny型の戻り値警告制御

# =====================================
# coverage設定
# =====================================

[tool.coverage]
data_file = ".coverage/coverage"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/conftest.py",
    "src/main.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pass",
]

[tool.ty.src]
include = ["src", "tests", "tests_e2e"]
exclude = [".venv"]

[tool.vulture]
exclude = []
ignore_decorators = [
    "@app.get",
    "@app.post",
    "@app.put",
    "@app.delete",
    "@app.patch",
    "@router.get",
    "@router.post",
    "@router.put",
    "@router.delete",
    "@router.patch",
]
ignore_names = [
    "drop_params",
    "id",  # SQLModel フィールド
    "multiparams",  # SQLAlchemy コールバック引数
    "params",  # SQLAlchemy コールバック引数
    "title",  # openpyxl ワークシート属性
]

# =====================================
# taskipy設定
# =====================================

[tool.taskipy.tasks]
# 開発サーバー
dev = "uvicorn src.main:app --reload --port 8000"
prod = "uvicorn src.main:app --host 0.0.0.0 --port 8000"

# テスト
test = "pytest --testmon"
test-ut = "pytest --testmon tests/unit"
test-it = "pytest --testmon tests/integration"
test-ci = "pytest tests"  # CI では全テストを実行
test-all = "pytest"
coverage = "pytest --cov=src --cov-report=term-missing"

# Lint/Format
ruff = "ruff format . && ruff check --fix ."
vulture = "vulture src"
mypy = "mypy ."
lint = "task ruff && task vulture && task mypy"

# 依存関係管理
sync = "uv sync --extra dev"
sync-prod = "uv sync"

# マイグレーション
migrate-apply = "alembic upgrade head"
migrate-history = "alembic history"
migrate-downgrade = "alembic downgrade -1"

# アセット管理
download-assets = "python scripts/download_assets.py"

# ドキュメント生成
docs = "pdoc app --html --output-dir docs"

# すべてのチェックとテスト
test-all-checks = "task lint && task coverage"

